# checkmark

./: .gitignore  .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  checkmark.toml  codesign.sh  deny.toml  diff.txt  justfile  rendered.md  report.sarif  rust-toolchain.toml
.cargo/: audit.toml
.github/: release.yml
.github/workflows/: pr.yml
config/: checkmark.toml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  THEMES.md
src/: args.rs  checker.rs  deno.rs  file_explorer.rs  format_checker.rs  formatter.rs  grammar.rs  link_checker.rs  linter.rs  main.rs  md.rs  prettier.rs  spell_checker.rs
src/checkmark_cli/: Cargo.toml
src/checkmark_cli/src/: args.rs  cli.rs  config.rs  config_template.toml  errors.rs  main.rs  tui.rs
src/checkmark_cli/tests/: end_2_end.rs
src/checkmark_cli/tests/data/: end_to_end.md  full_markdown_example.md  test_markdown_file.md
src/checkmark_fmt/: Cargo.toml  output.md
src/checkmark_fmt/src/: context.rs  lib.rs  style.rs  utils.rs
src/checkmark_fmt/tests/: block_quotes.rs  code_tests.rs  commonmark_tests.rs  definition_tests.rs  delete.rs  end_to_end_tests.rs  heading_tests.rs  html_tests.rs  image_tests.rs  link_tests.rs  lists_tests.rs  strong_tests.rs  sub_super_script.rs  table_tests.rs  text_tests.rs  utils.rs  yaml_tests.rs
src/checkmark_fmt/tests/data/: common_mark.json  end_to_end.md  full_markdown_example.md  test_markdown_file.md
src/checkmark_link_checker/: Cargo.toml
src/checkmark_link_checker/src/: client_config.rs  collector.rs  lib.rs  link_collector.rs
src/checkmark_link_checker/src/handlers/: invalid_file_path.rs  mod.rs  network_request_error.rs  request_timeout.rs  unreachable_email.rs  utils.rs
src/checkmark_link_checker/tests/: end_2_end.rs
src/checkmark_link_checker/tests/data/: basic.md
src/checkmark_lint/: Cargo.toml
src/checkmark_lint/common/: Cargo.toml
src/checkmark_lint/common/src/: lib.rs  rule.rs  violation.rs
src/checkmark_lint/core/: Cargo.toml
src/checkmark_lint/core/src/: lib.rs  md001_heading_level_should_increment_by_one_level_at_time.rs  md003_heading_style.rs  md004_unordered_list_style.rs  md005_consistent_list_items_indentation.rs  md007_unordered_list_indentation.rs  md009_trailing_spaces.rs  md010_hard_tabs.rs  md011_reversed_link_syntax.rs  md012_multiple_blank_lines.rs  md014_dollar_sign_before_command_without_output.rs  md018_no_space_after_hash_in_atx_heading.rs  md019_multiple_spaces_after_hash_in_atx_heading.rs  md020_no_space_inside_hashes_on_closed_atx_heading.rs  md021_multiple_spaces_inside_hashes_on_closed_atx_heading.rs  md022_headings_should_be_surrounded_by_blank_lines.rs  md023_headings_must_start_at_the_beginning_of_the_line.rs  md024_multiple_headings_with_the_same_content.rs  md025_multiple_top_level_headings.rs  md026_trailing_punctuation_in_heading.rs  md027_multiple_spaces_after_block_quote_symbol.rs  md028_blank_line_inside_block_quote.rs  md029_ordered_list_item_prefix.rs  md030_spaces_after_list_markers.rs  md031_fenced_code_blocks_surrounded_with_blank_lines.rs  md033_inline_html.rs  md046_code_block_style.rs  md051_link_fragments_should_be_valid.rs
src/checkmark_lint/macro/: Cargo.toml
src/checkmark_lint/macro/src/: lib.rs  rule.rs  rule_test.rs
src/checkmark_lint/src/: lib.rs  md001_heading_level_should_increment_by_one_level_at_time.rs  md003_heading_style.rs  md004_unordered_list_style.rs  md005_consistent_list_items_indentation.rs  md007_unordered_list_identation.rs  md007_unordered_list_indentation.rs  md009_trailing_spaces.rs  md010_hard_tabs.rs  md011_reversed_link_syntax.rs  md012_multiple_blank_lines.rs  md014_dollar_sign_before_command_without_output.rs  md018_no_space_after_has_in_atx_heading.rs  md018_no_space_after_hash_in_atx_heading.rs  md019_multiple_spaces_after_hash_in_atx_heading.rs  md020_no_space_inside_hashes_on_closed_atx_heading.rs  md021_multiple_spaces_inside_hashes_on_closed_atx_heading.rs  md022_headings_should_be_surrounded_by_blank_lines.rs  md023_headings_must_start_at_the_beginning_of_the_line.rs  md024_multiple_headings_with_the_same_content.rs  md025_multiple_top_level_headings.rs  md026_trailing_punctuation_in_heading.rs  md027_multiple_spaces_after_block_quote_symbol.rs  md028_blank_line_inside_block_quote.rs  md029_ordered_list_item_prefix.rs  md030_spaces_after_list_markers.rs  md031_fenced_code_blocks_surrounded_with_blank_lines.rs  md033_inline_html.rs  md046_code_block_style.rs  md051_link_fragments_should_be_valid.rs  violation.rs
src/checkmark_ls/: Cargo.toml
src/checkmark_ls/src/: lib.rs
src/checkmark_ls/tests/: end_2_end.rs
src/checkmark_open_ai/: Cargo.toml
src/checkmark_open_ai/src/: lib.rs  open_ai.rs
src/checkmark_open_ai/src/prompts/: compose_default_role.txt  review_default_role.txt  review_response_format.txt
src/checkmark_open_ai/tests/: basic_tests.rs
src/checkmark_open_ai/tests/data/: basic.md
src/checkmark_render/: Cargo.toml
src/checkmark_render/src/: associated_files.rs  dev_server.rs  lib.rs  md_to_html.rs  style.css  themes.rs
src/checkmark_render/src/themes/: book.css  funk.css  gfm.css  paper.css  space.css  whiteboard.css
src/checkmark_spelling/: Cargo.toml
src/checkmark_spelling/src/: lib.rs  spell_checker.rs  text_to_words.rs
src/checkmark_spelling/src/dictionaries/: extended_frequency_dictionary.txt
src/checkmark_spelling/tests/: end_2_end.rs
src/checkmark_spelling/tests/data/: basic.md
src/common/: Cargo.toml
src/common/src/: ast.rs  lib.rs  tui.rs
src/common/tests/: for_each.rs
src/js/: bundle.js  markdown-it.min.js  micromark-browser.js
src/legacy/: linter.rs  main.rs  spell_checker.rs
src/legacy/js/: index.js
test_files/: correct.md  spell_issues.md
tests/: entry_point_test.rs  lint_test.rs  utils.rs
tests/data/: blockquotes.md  file_does_not_start_with_h1_heading.md  format_issues.md  link_issues.md  lint_issues.md  lists.md  table_of_content.md
tests/data/correct_files/: correct_basic_copy.md
