[workspace.package]
version = "0.6.0"
edition = "2021"
publish = false
license = "MIT"

[workspace]
members = [
  "src/checkmark_cli",
  "src/checkmark_fmt",
  "src/checkmark_link_checker",
  "src/checkmark_lint/common",
  "src/checkmark_lint/core",
  "src/checkmark_lint/macro",
  "src/checkmark_ls",
  "src/checkmark_open_ai",
  "src/checkmark_spelling",
  "src/common",
]
resolver = "2"

[workspace.dependencies]
checkmark_fmt = { path = "src/checkmark_fmt" }
checkmark_link_checker = { path = "src/checkmark_link_checker" }
checkmark_lint_common = { path = "src/checkmark_lint/common" }
checkmark_lint_core = { path = "src/checkmark_lint/core" }
checkmark_lint_macro = { path = "src/checkmark_lint/macro" }
checkmark_ls = { path = "src/checkmark_ls" }
checkmark_open_ai = { path = "src/checkmark_open_ai" }
checkmark_render = { path = "src/checkmark_render" }
checkmark_spelling = { path = "src/checkmark_spelling" }
common = { path = "src/common" }
clap = { version = "4.5.20", features = ["derive", "cargo"] }
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
serde-sarif = "0.4.2"
serde_json = "1.0.132"
colored = "2.1.0"
dunce = "1.0.5"
rayon = "1.10.0"
futures = "0.3.31"
log = "0.4.22"
env_logger = "0.10.2"
markdown = { version = "1.0.0-alpha.21", features = ["json", "log", "serde"] }
prettydiff = "0.6.4"
async-std = "1.13.0"
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
wildmatch = "2.4.0"
lychee-lib = { version = "0.14.1", features = [
  "email-check",
  "vendored-openssl",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
scraper = "0.18.1"
line-numbers = "0.3.0"
regex = "1.11.1"
once_cell = "1.20.2"
glob = "0.3.1"
is-url = "1.0.4"
git2 = { version = "0.18.3", features = ["vendored-libgit2"] }
auth-git2 = "0.5.5"
path-slash = "0.2.1"
dotenvy = "0.15.7"
os_info = "3"
fs_extra = "1.3.0"
html_editor = "0.7.0"
rouille = "3.6.2"
open = "5.3.0"
symspell = { git = "https://github.com/vvvar/symspell.git", branch = "no_print_progress" }
strsim = "0.11.1"
toml = "0.8.19"
spinners = "4.1.1"
codespan-reporting = "0.11.1"
assert_cmd = "2.0.16"
predicates = "3.1.2"
url = "2.5.4"
url-macro = "0.1.9"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.93"
paste = "1.0.15"
quote = "1.0.38"
darling = "0.20.10"
syn = "2.0.96"