[package]
name = "checkmark_cli"
description = "A CLI tool that helps maintain high-quality Markdown documentation by checking for formatting, grammatical, and spelling errors, as well as broken links"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "checkmark"
path = "src/main.rs"

[dependencies]
checkmark_fmt.workspace = true
checkmark_link_checker.workspace = true
checkmark_lint_core.workspace = true
checkmark_ls.workspace = true
checkmark_open_ai.workspace = true
checkmark_render.workspace = true
checkmark_spelling.workspace = true
common.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde-sarif.workspace = true
serde_json.workspace = true
colored.workspace = true
dunce.workspace = true
rayon.workspace = true
futures.workspace = true
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
