[package]
name = "checkmark_fmt"
description = "Library to work with Markdown formatting"
version = "0.0.1"
edition = "2021"

[dependencies]
common = { path = "../common" }

markdown = { version = "1.0.0-alpha.14", features = [ "json", "log", "serde" ] }
serde-sarif = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"

prettydiff = "0.6.4"
console = "0.15.7"