[package]
name = "checkmark_fmt"
description = "Library to work with Markdown formatting"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
markdown.workspace = true
serde-sarif.workspace = true
serde.workspace = true
serde_json.workspace = true
prettydiff.workspace = true
log.workspace = true
colored.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
