[package]
name = "checkmark_link_checker"
description = "Library to check links in Markdown"
version = "0.0.1"
edition = "2021"

[dependencies]
common = { path = "../common" }

tokio = { version = "1.32.0", features = ["full"] }
async-std = "1.12.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
wildmatch = "2.1.1"
lychee-lib = { version = "0.13.0", features = [ "vendored-openssl" ] }
futures = "0.3.30"
log = "0.4.2"

[dev-dependencies]
pretty_assertions = "1.4.0"