[package]
name = "checkmark_link_checker"
description = "Library to check links in Markdown"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common.workspace = true
tokio.workspace = true
async-std.workspace = true
reqwest.workspace = true
wildmatch.workspace = true
lychee-lib.workspace = true
futures.workspace = true
log.workspace = true
secrecy.workspace = true
colored.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
