[package]
name = "checkmark_lint"
description = "Library to lint Markdown files"
version = "0.0.1"
edition = "2021"

[dependencies]
common = { path = "../common" }

markdown = { version = "1.0.0-alpha.14", features = [ "json", "log", "serde" ] }
scraper = "0.18.1"
serde-sarif = "0.4.2"
log = "0.4.2"
line-numbers = "0.3.0"
regex = "1.10.2"
once_cell = "1.19.0"
rayon = "1.8.0"

[dev-dependencies]
pretty_assertions = "1.4.0"