[package]
name = "checkmark_lint"
description = "Library to lint Markdown files"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common.workspace = true
markdown.workspace = true
scraper.workspace = true
serde-sarif.workspace = true
log.workspace = true
line-numbers.workspace = true
regex.workspace = true
once_cell.workspace = true
rayon.workspace = true
colored.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
