[package]
name = "checkmark_ls"
description = "Library that lists Markdown files in provided dir"
version = "0.0.1"
edition = "2021"

[dependencies]
common = { path = "../common" }

glob = "0.3.1"
log = "0.4.20"
is-url = "1.0.4"
reqwest = { version="0.11.22", features = ["blocking", "json"] }
tempfile = "3.8.1"
git2 = { version = "0.18.1", features = ["vendored-libgit2"] }
wildmatch = "2.3.0"

[dev-dependencies]
env_logger = "0.10.1"
tokio = { version = "1.32.0", features = ["full"] }