[package]
name = "checkmark_ls"
description = "Library that lists Markdown files in provided dir"
version = "0.0.1"
edition = "2021"

[dependencies]
common = { path = "../common" }

glob = "0.3.1"
log = "0.4.20"
is-url = "1.0.4"
reqwest = { version="0.11.22", features = ["blocking", "json"] }
git2 = { version = "0.18.1", features = ["vendored-libgit2"] }
auth-git2 = "0.5.3"
wildmatch = "2.3.0"
dunce = "1.0.4"
path-slash = "0.2.1"

[dev-dependencies]
env_logger = "0.10.1"
tokio = { version = "1.32.0", features = ["full"] }