[package]
name = "checkmark_ls"
description = "Library that lists Markdown files in provided dir"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common.workspace = true
glob.workspace = true
log.workspace = true
is-url.workspace = true
reqwest.workspace = true
git2.workspace = true
auth-git2.workspace = true
wildmatch.workspace = true
dunce.workspace = true
path-slash.workspace = true

[dev-dependencies]
env_logger.workspace = true
tokio.workspace = true
