[package]
name = "checkmark_open_ai"
description = "Library to analyze Markdown with Open AI"
version = "0.0.1"
edition = "2021"

[dependencies]
common = { path = "../common" }

markdown = { version = "1.0.0-alpha.14", features = [ "json", "log", "serde" ] }
serde-sarif = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
tokio = "1.35.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
log = "0.4.2"
futures = "0.3.30"