[package]
name = "checkmark_open_ai"
description = "Library to analyze Markdown with Open AI"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common.workspace = true
markdown.workspace = true
serde-sarif.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
tokio.workspace = true
reqwest.workspace = true
log.workspace = true
futures.workspace = true
colored.workspace = true