[package]
name = "checkmark_render"
description = "Library to render Markdown into html"
version = "0.0.1"
edition = "2021"

[dependencies]
common = { path = "../common" }

tokio = { version = "1.32.0", features = ["full"] }
async-std = "1.12.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
wildmatch = "2.1.1"
lychee-lib = { version = "0.14.1" }
futures = "0.3.30"
log = "0.4.2"
secrecy = { version = "0.8.0", features = ["serde"] }
colored = "2.1.0"
markdown = { version = "1.0.0-alpha.14", features = [ "json", "log", "serde" ] }
dunce = "1.0.4"
regex = "1.10.2"
normpath = "1.1.1"
os_info = "3"
fs_extra = "1.3.0"
html_editor = "0.7.0"
rouille = "3.6.2"
rayon = "1.8.0"
open = "5.0.1"

[dev-dependencies]
pretty_assertions = "1.4.0"