[package]
name = "checkmark_render"
description = "Library to render Markdown into html"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
tokio.workspace = true
async-std.workspace = true
reqwest.workspace = true
lychee-lib.workspace = true
futures.workspace = true
log.workspace = true
secrecy.workspace = true
colored.workspace = true
markdown.workspace = true
dunce.workspace = true
regex.workspace = true
os_info.workspace = true
fs_extra.workspace = true
html_editor.workspace = true
rouille.workspace = true
rayon.workspace = true
open.workspace = true
