[package]
name = "checkmark_spelling"
description = "Library to spell check in Markdown"
version = "0.0.1"
edition = "2021"

[dependencies]
common = { path = "../common" }

symspell = { git = "https://github.com/vvvar/symspell.git", branch = "no_print_progress" }
markdown = { version = "1.0.0-alpha.14", features = [ "json", "log", "serde" ] }

log = "0.4.2"

[dev-dependencies]
pretty_assertions = "1.4.0"