[package]
name = "checkmark_spelling"
description = "Library to spell check in Markdown"
version = "0.0.1"
edition = "2021"

[dependencies]
common = { path = "../common" }

symspell = { git = "https://github.com/vvvar/symspell.git", branch = "no_print_progress" }
markdown = { version = "1.0.0-alpha.14", features = [ "json", "log", "serde" ] }
rayon = "1.8.0"
log = "0.4.2"
colored = "2.1.0"

[dev-dependencies]
env_logger = "0.10.1"
pretty_assertions = "1.4.0"