[package]
name = "checkmark_spelling"
description = "Library to spell check in Markdown"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common.workspace = true
symspell.workspace = true
markdown.workspace = true
rayon.workspace = true
log.workspace = true
colored.workspace = true
is-url.workspace = true

[dev-dependencies]
env_logger.workspace = true
pretty_assertions.workspace = true
once_cell.workspace = true
