[package]
name = "common"
description = "Common types, traits and helpers shared across libraries"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.193"
serde-sarif = "0.4.2"
markdown = { version = "1.0.0-alpha.14", features = [ "json", "log", "serde" ] }
strsim = "0.10.0"
env_logger = "0.10.1"
log = "0.4.2"
toml = "0.8.8"
