[package]
name = "common"
description = "Common types, traits and helpers shared across libraries"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde-sarif.workspace = true
markdown.workspace = true
strsim.workspace = true
env_logger.workspace = true
log.workspace = true
toml.workspace = true
spinners.workspace = true
codespan-reporting.workspace = true
colored.workspace = true
