[package]
name = "checkmark_lint_macro"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
checkmark_lint_common.workspace = true
quote.workspace = true
syn.workspace = true
darling.workspace = true
url-macro.workspace = true
url.workspace = true
proc-macro2.workspace = true
